[metadata]
name = mist-lang
description = programming language for security made easy
version = file: VERSION
long_description = file: README.rst TODO.rst
license = License :: OSI Approved :: BSD License
classifiers =
  Programming Language :: Python :: 3.8
authors = cr0hn
authors_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/mist

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    mist = mist.__main__:main
