[metadata]
name = mist-lang
description = programming language for security made easy
version = file: VERSION
long_description = file: README.rst TODO.rst
license = License :: OSI Approved :: MIT
classifiers =
  Programming Language :: Python :: 3.8
authors = BBVA Security Team
url = https://github.com/bbva/mist
python_requires='>=3.6, <3.9'

[bdist_wheel]
universal = 0

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    mist = mist.__main__:main
